<resources>
    <string name="app_name">Open Trivia DB Demo App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="browse">Browse</string>
    <string name="catalog">Catalog</string>
    <string name="quiz">Quiz</string>
    <string name="select_a_category">Select a category</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="total">Total:</string>
    <string name="easy">Easy: %1$d</string>
    <string name="medium">Medium: %1$d</string>
    <string name="hard">Hard: %1$d</string>
    <string name="title">Title</string>
    <string name="difficulty">Difficulty</string>
    <string name="result_title">Quiz Result</string>
    <string name="result_message">Your score is %1$s/10</string>
    <string name="result_button_show">Show Result</string>
    <string name="result_button_close">Close</string>

</resources>