<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_catalog_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/category"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_catalog_category_easy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:text="@string/easy"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_catalog_category_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:text="@string/medium"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_catalog_category_hard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:text="@string/hard"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="32dp"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ll_category"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/total" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_catalog_total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:paddingTop="24dp"
                android:textColor="@color/design_default_color_primary"
                android:textSize="32sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>